put favicon icon and read the code

--- a/clock app/index.html
+++ b/clock app/index.html
@@ -9,6 +9,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <!-- favicon icon -->
+    <link rel="icon" href="assets/alarm_clock.gif" size="16px*16px">
     <title>Clock</title>
   </head>
   <body>
